[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/State/LevelScenes/TestLevel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Placeholder/AnimatedLoadingScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Character/Character.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Main.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Camera.gd" type="Script" id=5]
[ext_resource path="res://Scripts/CameraData.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Phone/Phone.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/PhoneQuad.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Lighting/Sun.gd" type="Script" id=9]

[sub_resource type="ProceduralSky" id=1]
ground_bottom_color = Color( 0.172549, 0.847059, 0.721569, 1 )
ground_horizon_color = Color( 0.364706, 0.639216, 0.588235, 1 )
ground_curve = 0.011892

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
ambient_light_color = Color( 0.156863, 0.188235, 0.211765, 1 )
ambient_light_energy = 0.25
auto_exposure_enabled = true
auto_exposure_min_luma = 0.4
auto_exposure_max_luma = 1.0
auto_exposure_speed = 0.3
ssao_bias = 0.001

[sub_resource type="Resource" id=3]
script = ExtResource( 6 )
anchor_offset = Vector3( 0, 1.1, 0 )
target_offset = Vector3( -0.28, 0.45, -1.4 )
rotation = Vector3( 0, 0, 0 )
look_target = Vector3( 0, 0, 0 )
pitch_limit = Vector2( -45, 80 )

[sub_resource type="ViewportTexture" id=4]
flags = 4
viewport_path = NodePath("Camera/HUD/LoadingScreenViewport")

[sub_resource type="SpatialMaterial" id=5]
resource_local_to_scene = true
render_priority = 10
flags_transparent = true
flags_unshaded = true
flags_no_depth_test = true
albedo_texture = SubResource( 4 )

[sub_resource type="QuadMesh" id=6]
resource_local_to_scene = true
material = SubResource( 5 )
size = Vector2( 16, 9 )

[node name="Main" type="Spatial"]
script = ExtResource( 4 )

[node name="Staticcam" type="Camera" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -6.59424, 1.17272, 1.20194 )
visible = false

[node name="CloseTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="Sun" type="DirectionalLight" parent="."]
transform = Transform( 0.952736, -0.163621, 0.255974, -0.3038, -0.513124, 0.802751, 0, -0.842575, -0.53858, 0, 5.09665, 0 )
light_color = Color( 0.992157, 1, 0.929412, 1 )
shadow_enabled = true
shadow_color = Color( 0.501961, 0.501961, 0.501961, 1 )
directional_shadow_blend_splits = true
directional_shadow_normal_bias = 0.0
script = ExtResource( 9 )

[node name="World" type="Spatial" parent="."]

[node name="TestLevel" parent="World" instance=ExtResource( 1 )]

[node name="PlayerCharacter" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0850797, 1.87091 )
camera = NodePath("../Camera")

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1, 0, 3.25841e-07, 0, 1, 0, -3.25841e-07, 0, -1, -0.28, 1.45, -1.4 )
current = true
script = ExtResource( 5 )
target = NodePath("../PlayerCharacter")
setup = SubResource( 3 )

[node name="HUD" type="Spatial" parent="Camera"]
transform = Transform( 0.125, 0, 0, 0, 0.125, 0, 0, 0, 1, -1.19209e-07, 0, -0.804991 )

[node name="LoadingScreenViewport" type="Viewport" parent="Camera/HUD"]
size = Vector2( 1920, 1080 )
keep_3d_linear = true
render_target_v_flip = true

[node name="LoadingScreen" parent="Camera/HUD/LoadingScreenViewport" instance=ExtResource( 2 )]

[node name="PhoneQuad" type="MeshInstance" parent="Camera/HUD"]
transform = Transform( 1.01, 0, 0, 0, 1.01, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 6 )
material/0 = null
script = ExtResource( 8 )

[node name="Tween" type="Tween" parent="Camera"]

[node name="PhoneViewport" type="Viewport" parent="."]
size = Vector2( 3840, 2160 )
own_world = true
transparent_bg = true
msaa = 3
render_target_v_flip = true

[node name="Phone" parent="PhoneViewport" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, 0 )
[connection signal="timeout" from="CloseTimer" to="." method="_on_CloseTimer_timeout"]
